Fixed very long horizontal scroll on mobile

--- a/siteBase/resources/style.css
+++ b/siteBase/resources/style.css
@@ -85,7 +85,7 @@ body {
   text-align: left;
   margin-left: 40vw;
   padding-left: 1vw;
-  width: 100%;
+  width: auto;
   height: auto;
   left: 0;
   right: 0;
